# personal_library

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
architecture/: index.html
data/: autores.json  generos.json  libros.json
docs/: architecture.md  guia_desarrollo.md  guia_instalacion.md  guia_usuario.md  index.md  reference.md
docs/referencia/: api.md
docs/user_guide/: guia_usuario.md  persistance.md  persistence.md
guia_desarrollo/: index.html
guia_instalacion/: index.html
guia_usuario/: index.html
interfaces/gui/: streamlit_app.py
reference/: index.html
referencia/api/: index.html
search/: search_index.json
src/my_app/: __init__.py  cli.py  exceptions.py  models.py  services.py  storage.py
tests/: conftest.py  test_services.py
user_guide/guia_usuario/: index.html
user_guide/persistence/: index.html
