[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest",
        "ruff"
]

[project.scripts]
library = "my_app.cli:app"
